stylesheets/_modules.scss
/* ... */
.module-main-header__search__input--with-text {
  padding-right: 30px;
}

.module-main-header__search__input--in-conversation {
  padding-left: 50px;
}

.module-main-header__search__icon {
  position: absolute;
  left: 8px;
  top: 6px;
  height: 16px;
  width: 16px;

  cursor: text;

  @include light-theme {
    @include color-svg('../images/icons/v2/search-16.svg', $color-gray-75);
  }
  @include dark-theme {
    @include color-svg('../images/icons/v2/search-16.svg', $color-gray-25);
  }
}

.module-main-header__search__in-conversation-pill {
  position: absolute;
  left: 3px;
  top: 3px;
  bottom: 3px;

  border-radius: 14px;
  width: 42px;

  display: flex;
  flex-direction: row;
  align-items: center;

  // Overriding some default button styling
  border: none;
  padding: 0;
  outline: none;

  @include light-theme {
    background-color: $color-gray-15;
  }
  @include dark-theme {
    background-color: $color-gray-75;
  }
}
.module-main-header__search__in-conversation-pill__avatar-container {
  margin-left: 4px;
  height: 16px;
  width: 16px;
  border-radius: 8px;

  background-color: $color-signal-blue;
}
.module-main-header__search__in-conversation-pill__avatar {
  height: 16px;
  width: 16px;

  @include light-theme {
    @include color-svg(
      '../images/icons/v2/profile-circle-outline-24.svg',
      $color-white
    );
  }
  @include dark-theme {
    @include color-svg(
      '../images/icons/v2/profile-circle-solid-24.svg',
      $color-gray-05
    );
  }
}
.module-main-header__search__in-conversation-pill__x-button {
  margin-left: 2px;

  height: 16px;
  width: 16px;

  @include light-theme {
    @include color-svg('../images/icons/v2/x-24.svg', $color-gray-60);
  }
  @include dark-theme {
    @include color-svg('../images/icons/v2/x-24.svg', $color-gray-25);
  }
}

.module-main-header__search__cancel-icon {
  position: absolute;
  right: 8px;
  top: 5px;
  height: 18px;
  width: 18px;

  @include light-theme {
    @include color-svg('../images/icons/v2/x-24.svg', $color-gray-60);
  }
  @include dark-theme {
    @include color-svg('../images/icons/v2/x-24.svg', $color-gray-25);
  }
}

// Module: Image

.module-image {
  position: relative;
  display: inline-block;
  margin: 1px;
  vertical-align: middle;
}

.module-image--with-background {
  @include light-theme {
    background-color: $color-white;
  }
  @include dark-theme {
    background-color: $color-black;
  }
}

.module-image__caption-icon {
  position: absolute;
  top: 6px;
  left: 6px;
}

.module-image--soft-corners {
  border-radius: 4px;
}

.module-image--curved-top-left {
  border-top-left-radius: 16px;
}
.module-image--curved-top-right {
  border-top-right-radius: 16px;
}
.module-image--curved-bottom-left {
  border-bottom-left-radius: 16px;
}
.module-image--curved-bottom-right {
  border-bottom-right-radius: 16px;
}
.module-image--small-curved-top-left {
  border-top-left-radius: 10px;
}

.module-image__border-overlay {
  @include button-reset;

  width: 100%;
  cursor: inherit;

  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
}

.module-image__border-overlay--with-click-handler {
  cursor: pointer;
}

.module-image__border-overlay--with-border {
  @include light-theme {
    box-shadow: inset 0px 0px 0px 1px $color-black-alpha-20;
  }
  @include dark-theme {
    box-shadow: inset 0px 0px 0px 1px $color-white-alpha-20;
  }
}

// Only if it's a sticker do we put the outline inside it
.module-message--selected
  .module-message__container--with-sticker
  .module-image__border-overlay {
  @include mouse-mode {
    top: 1px;
    bottom: 1px;
    left: 1px;
    right: 1px;
    border-radius: 10px;

    animation: message--mouse-selected 1s $ease-out-expo;
  }
}

.module-message:focus
  .module-message__container--with-sticker
  .module-image__border-overlay {
  @include keyboard-mode {
    top: 1px;
    bottom: 1px;
    left: 1px;
    right: 1px;
    border-radius: 10px;

    box-shadow: 0 0 0 3px $color-signal-blue;
  }
}

button.module-image__border-overlay:focus {
  @include keyboard-mode {
    box-shadow: inset 0px 0px 0px 2px $color-signal-blue;
  }
}

.module-image__border-overlay--dark {
  background-color: $color-black-alpha-20;
}

.module-image__loading-placeholder {
  display: inline-flex;
  flex-direction: row;
  align-items: center;

  @include light-theme {
    background-color: $color-black-alpha-20;
  }
  @include dark-theme {
    background-color: $color-white-alpha-20;
  }
}

.module-image__image {
  object-fit: cover;
  // redundant with attachment-container, but we get cursor flashing on move otherwise
  cursor: pointer;

  // Seems to be related to body text size
  margin-bottom: -5px;
}

.module-image__bottom-overlay {
  height: 48px;
  background-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0),
    rgba(0, 0, 0, 0) 9%,
    rgba(0, 0, 0, 0.02) 17%,
    rgba(0, 0, 0, 0.05) 24%,
    rgba(0, 0, 0, 0.08) 31%,
    rgba(0, 0, 0, 0.12) 37%,
    rgba(0, 0, 0, 0.16) 44%,
    rgba(0, 0, 0, 0.2) 50%,
    rgba(0, 0, 0, 0.24) 56%,
    rgba(0, 0, 0, 0.28) 63%,
    rgba(0, 0, 0, 0.32) 69%,
    rgba(0, 0, 0, 0.35) 76%,
    rgba(0, 0, 0, 0.38) 83%,
    rgba(0, 0, 0, 0.4) 91%,
    rgba(0, 0, 0, 0.4)
  );
  position: absolute;
  bottom: 0;
  z-index: 1;
  left: 0;
  right: 0;
}

.module-image__play-overlay__circle {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  width: 48px;
  height: 48px;
  background-color: $color-white;
  border-radius: 24px;
}

.module-image__play-overlay__icon {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  height: 24px;
  width: 24px;
  @include color-svg(
    '../images/icons/v2/play-solid-24.svg',
    $color-signal-blue
  );
}

.module-image__text-container {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 2;

  color: $color-white;

  @include font-body-1;

  text-align: center;
}
/* ... */

